deploymentfunctionality added to package.json_rev

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://dylanhay.github.io/photo-port",
+  "homepage": "http://dylanhay.github.io/photo-port-react",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
